# Agentic-Travel-Planning-Platform-with-Dynamic-Route-Optimization

./: .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  pages.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: routes.py
backend/app/bench/: latency.py
backend/app/graph/: build.py  state.py
backend/app/graph/nodes/: _util.py  assemble.py  booking.py  budget.py  places.py  planner.py  routing.py  trim.py  weather.py
backend/app/providers/maps/: base.py  factory.py  google.py  nominatim.py  ors.py
backend/app/resilience/: breaker.py  errors.py  http.py  limiter.py
backend/app/schemas/: trip.py
backend/app/services/: budget.py  llm.py  memory.py  optimize.py  pipeline.py  store.py
backend/app/tools/: amadeus.py  fx.py  open_meteo.py  opentripmap.py  rest_countries.py  wikipedia.py
backend/tests/: conftest.py  test_api.py  test_budget.py  test_graph_integration.py  test_optimize.py  test_planner_rules.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: sample-itinerary.json
frontend/src/: App.tsx  format.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentRuns.tsx  BudgetSummary.tsx  ItineraryTimeline.tsx  PlanForm.tsx
